--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -18,7 +18,7 @@
 				<span>Name</span>
 			</th>
 			<th>
-				<span>Are they going?</span>
+				<span>Going?</span>
 			</th>
 			<th>
 				<span>Email</span>
@@ -57,6 +57,7 @@
 		</tr>
 	</script>
 	
+	<script type="text/javascript" src="../js/lib/underscore-min.js"></script>
 	<script type="text/javascript" src="../js/lib/jquery-1.7.2.min.js"></script>
 	<script type="text/javascript" src="../js/admin.js"></script>
 	
