reorganize and add content

--- a/public/index.html
+++ b/public/index.html
@@ -27,14 +27,6 @@
 		</header>
 		
 		<section class="one-third column mainColumn">
-			<h3>The Details</h3>
-			<p>Join us for an afternoon wedding and cocktail party pinterest deep v gentrify kogi irony disrupt. Schlitz salvia you probably haven't heard of them small batch High Life..</p>
-			<ul>
-				<li><strong>Where Should I Stay?</strong> There are a number of hotels within walking distance of the reception. We've negotiated a discounted rate with the <a href="#">Hampton Inn</a> downtown. Just mention "the Aparo wedding" when booking.</li>
-			</ul>
-			<h5><a class="boldLink" href="#">RSVP Now</a></h5>
-		</section>
-		<section class="one-third column mainColumn">
 			<h3>The Ceremony</h3>
 			<!--<img src="img/churchSmall.jpg" />-->
 			<img class="mapImage" src="http://maps.googleapis.com/maps/api/staticmap?center=30.674899,-88.090225&zoom=15&size=240x180&sensor=false&markers=|30.674899,-88.090225" />
@@ -43,8 +35,7 @@
 				<li><strong>When should I be there? </strong>The ceremony starts at <em>2:30 PM</em>, so a little before that.</li>
 				<li><strong>Where can I park? </strong>There's plenty of parking behind the church and in the gated lot next door.</li>
 			</ul>
-		</section>
-		<section class="one-third column mainColumn">
+			
 			<h3>The Reception</h3>
 			<!--<img src="img/houseSmall.jpg" />-->
 			<img class="mapImage" src="http://maps.googleapis.com/maps/api/staticmap?center=30.690076,-88.045051&zoom=15&size=240x180&sensor=false&markers=|30.690076,-88.045051" />
@@ -53,8 +44,38 @@
 				<li><strong>When should I be there? </strong>The reception starts immediately after the ceremony.</li>
 				<li><strong>Where can I park? </strong>Parking downtown is limited so deep v gentrify kogi irony disrupt.</li>
 			</ul>
-
+			
 		</section>
+		
+		<section class="two-thirds column mainColumn">
+			
+			<h5>We're celebrating our five year anniversary by getting married!</h5>
+			<p>We hope you can join us in Mobile on <em>September 7th, at 2:30 PM</em> for a ceremony and an afternoon cocktail reception. </p>
+			
+			<h5>Where should I stay?</h5>
+			<p>We have reserved a block of rooms at the <a href="http://hamptoninn.hilton.com/en/hp/">Hampton Inn</a> downtown, just a couple of blocks from the reception site. You can get a standard room for $110/night or a room with a balcony for $129/night using the group code “HAW” if you book before August 16th. This includes a hot breakfast but tax and parking may be extra. You can get more information <a href="http://hamptoninn.hilton.com/en/hp/groups/personalized/M/MOBDTHX-HAW-20130905/index.jhtml?WT.mc_id=POG">here</a>.</p>
+			<p>Another option would be the <a href="http://www.ihg.com/holidayinn/hotels/us/en/mobile/mobhi/hoteldetail">Holiday Inn</a>, just a block from the reception site. Standard rooms start around $105. Check out <a href="http://www.ihg.com/holidayinn/hotels/us/en/mobile/mobhi/hoteldetail">their website</a> for more information.</p>
+			
+			<h5>What should I wear?</h5>
+			<p>Attire is dressy but not formal. September in Mobile tends to be hot, but we ask that you be respectful of the church setting for our ceremony. The bride will probably be the only one wearing a long dress (though your cute maxi is okay). No tuxes required.</p>
+			
+			<h5>How Do I Get Around?</h5>
+			<p>Mobile is a driving town. Downtown is more walkable, but driving here is also trickier. There are a lot of one-way streets so please keep that in mind as you plan your route.</p>
+			<p>We’ve created a Google map that marks the ceremony, reception, suggested hotels, and other points of interest. Mary Ella loves using these when she plans our trips out of town. We hope you find them as useful as we do!</p>
+			
+			<h5>What Else Is There To Do?</h5>
+			<ul>
+				<li><a href="http://www.yelp.com/biz/loda-biergarten-mobile-2">LODA Biergarten</a> - Try one (or more) beers from this bar's huge selection. <em>Downtown</em></li>
+				<li><a href="http://www.serdas.com/">Serda's Coffee Co.</a> - Get your morning caffeine fix at this Mobile institution. <em>Downtown</em></li>
+				<li><a href="http://mediterraneansandwich.com/">Mediterranean Sandwich Company</a> - Grab a delicious sandwich at "Club Med." <em>Downtown</em></li>
+				<li><a href="http://www.yelp.com/biz/spot-of-tea-mobile">Spot of Tea</a> - Get your brunch on accross from Cathedral Square. <em>Downtown</em></li>
+				<li><a href="http://www.royalscammobile.com/">Royal Scam</a> - Craving a roasted duck panini with a mango salad? <em>Downtown</em></li>
+				<li><a href="http://www.yelp.com/biz/yen-restaurant-mobile">Yen Vietnamese</a> - Sam's favorite restaurant in Mobile. Get the crepe! <em>Midtown</em></li>
+			</ul>
+			
+		</section>
+		
+	
 		
 		<div id="rsvp_showForm" class="eight columns offset-by-four">
 			<button>RSVP Today</button>
