added directions and registry links

--- a/public/index.html
+++ b/public/index.html
@@ -36,27 +36,27 @@
 			<h3>The Ceremony</h3>
 			<!--<img src="img/churchSmall.jpg" />-->
 			<img class="mapImage" src="http://maps.googleapis.com/maps/api/staticmap?center=30.674899,-88.090225&zoom=15&size=240x180&sensor=false&markers=|30.674899,-88.090225" />
-			<p>Mary Ella has been attending the beautiful <a href="http://www.littleflower.cc/" target="_blank">Little Flower Catholic Church</a> since she was born. It's located on Government street (near the "loop") on the way downtown. deep v gentrify kogi irony disrupt. Schlitz salvia you probably haven't heard. </p>
+			<p>Mary Ella has been attending the beautiful <a href="http://www.littleflower.cc/" target="_blank">Little Flower Catholic Church</a> since she was baptized there. </p>
 			<ul>
-				<li><strong>When should I be there? </strong>The ceremony starts at <em>2:30 PM</em>, so a little before that.</li>
-				<li><strong>Where can I park? </strong>There's plenty of parking behind the church and in the gated lot next door.</li>
+				<li><strong>Directions: </strong>From I-10, take exit 26-B, merge onto Water St., take the first the first left onto Government St., continue for about three miles and it'll be on the left. From I-65, take exit 1 for US 90, take a left onto Government Blvd, continue for about three miles and it'll be on the right. </li>
+				<li><strong>Parking: </strong>The best place to park is in the lot behind the Little Flower Catholic School. Just turn onto Little Flower Ave. and you'll see the gated lot.</li>
 			</ul>
 			
 			<h3>The Reception</h3>
 			<!--<img src="img/houseSmall.jpg" />-->
 			<img class="mapImage" src="http://maps.googleapis.com/maps/api/staticmap?center=30.690076,-88.045051&zoom=15&size=240x180&sensor=false&markers=|30.690076,-88.045051" />
-			<p><a href="http://www.portierhouse.org/" target="_blank">Bishop Portier House</a> is located asymmetrical Pinterest deep v gentrify kogi irony disrupt. Schlitz salvia you probably haven't heard of them small batch High Life. Thundercats pour-over farm-to-table, quinoa food truck semiotics actually street art bitters blog jean shorts Bushwick.</p>
+			<p><a href="http://www.portierhouse.org/" target="_blank">Bishop Portier House</a> is a historic home named for the first bishop of Mobile. It's located in the beautiful cathedral square downtown.</p>
 			<ul>
-				<li><strong>When should I be there? </strong>The reception starts immediately after the ceremony.</li>
-				<li><strong>Where can I park? </strong>Parking downtown is limited so deep v gentrify kogi irony disrupt.</li>
+				<li><strong>Directions: </strong>From the ceremony parking lot, turn onto Little Flower Ave. and immediately right (east) on Government St. Continue for about three miles, take a left on to Jackson St., take next left onto Conti, and the Portier House will be a white house on the left, next to the Space 301 Art Gallery.</li>
+				<li><strong>Parking: </strong>There should be plenty of street parking nearby. There's also a paid lot one block over on Dauphin St.</li>
 			</ul>
 			
 		</section>
 		
 		<section class="two-thirds column mainColumn">
 			
-			<h5>We're celebrating our five year anniversary by getting married!</h5>
-			<p>We hope you can join us in Mobile on <em>September 7th, at 2:30 PM</em> for a ceremony and an afternoon cocktail reception. </p>
+			<h2>We're Getting Married!</h2>
+			<p>We'll be celebrating our five year anniversary by finally tying the knot! We hope you can join us in Mobile, AL on <em>September 7th</em> for a ceremony and an afternoon cocktail reception. </p>
 			
 			<h5>Where should I stay?</h5>
 			<p>We have reserved a block of rooms at the <a href="http://hamptoninn.hilton.com/en/hp/">Hampton Inn</a> downtown, just a couple of blocks from the reception site. You can get a standard room for $110/night or a room with a balcony for $129/night using the group code “HAW” if you book before August 16th. This includes a hot breakfast but tax and parking may be extra. You can get more information <a href="http://hamptoninn.hilton.com/en/hp/groups/personalized/M/MOBDTHX-HAW-20130905/index.jhtml?WT.mc_id=POG">here</a>.</p>
@@ -83,11 +83,29 @@
 		
 	
 		
-		<div id="rsvp_showForm" class="sixteen columns">
+		<section id="rsvp_showForm" class="sixteen columns">
 			<div id="rsvpBottomButton">
 				<img src='/img/rsvpBottom.png' />
 			</div>
-		</div>
+		</section>
+		
+		
+		<section id="registryButtons" class="sixteen columns">
+			<div style="width:152px;">
+				<h5>We're Registered At</h5>
+			</div>
+			<div style="width:76px;">
+				<a href="http://target.bfi0.com/188a7e15blayeousibn7ynfaaaaaaaaaaaaacsxz4dnkqaaauhrxvsaae/C?U=aHR0cDovL3d3dy50YXJnZXQuY29tL3dlZGQvcmVnaXN0cnkvdkVWTmpVckpsVXh5THM1cTNCdHVTUQ%3D%3D&&jjz/helswXmUcxLv6hh5Vg" target="_blank"><img src="/img/target.jpg" /></a>
+			</div>
+			<div style="width:160px;">
+				<a href="http://www.bedbathandbeyond.com/regGiftRegistry.asp?wrn=-548980481&" target="_blank"><img src="/img/bed.jpg" /></a>
+			</div>
+			<div style="width:158px;">
+				<a href="http://www.amazon.com/registry/wedding/2XA18DBGRPHGV" target="_blank"><img src="/img/amazon.jpg" /></a>
+			</div>
+			
+		</section>
+		
 		
 	</div>
 	<div id="rsvp_container" class="container">
