added links to google maps and google analytics

--- a/public/index.html
+++ b/public/index.html
@@ -35,19 +35,23 @@
 		<section class="one-third column mainColumn">
 			<h3>The Ceremony</h3>
 			<!--<img src="img/churchSmall.jpg" />-->
-			<img class="mapImage" src="http://maps.googleapis.com/maps/api/staticmap?center=30.674899,-88.090225&zoom=15&size=240x180&sensor=false&markers=|30.674899,-88.090225" />
-			<p>Mary Ella has been attending the beautiful <a href="http://www.littleflower.cc/" target="_blank">Little Flower Catholic Church</a> since she was baptized there. </p>
+			<a target="_blank" href="https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=Little+Flower+Catholic+School,+Government+Street,+Mobile,+AL&aq=0&oq=little+flower+&sll=32.576226,-86.680736&sspn=6.228551,9.382324&vpsrc=0&ie=UTF8&hq=Little+Flower+Catholic+School,&hnear=Government+St,+Mobile,+Alabama&t=m&z=14&cid=2738449597473826186&iwloc=A">
+				<img class="mapImage" src="http://maps.googleapis.com/maps/api/staticmap?center=30.674899,-88.090225&zoom=15&size=240x180&sensor=false&markers=|30.674899,-88.090225" />
+			</a>
+				<p>Mary Ella has been attending the beautiful <a href="http://www.littleflower.cc/" target="_blank">Little Flower Catholic Church</a> since she was baptized there. </p>
 			<ul>
-				<li><strong>Directions: </strong>From I-10, take exit 26-B, merge onto Water St., take the first the first left onto Government St., continue for about three miles and it'll be on the left. From I-65, take exit 1 for US 90, take a left onto Government Blvd, continue for about three miles and it'll be on the right. </li>
+				<li><strong>Directions: </strong>(2053 Government St.) From I-10, take exit 26-B, merge onto Water St., take the first the first left onto Government St., continue for about three miles and it'll be on the left. From I-65, take exit 1 for US 90, take a left onto Government Blvd, continue for about three miles and it'll be on the right. </li>
 				<li><strong>Parking: </strong>The best place to park is in the lot behind the Little Flower Catholic School. Just turn onto Little Flower Ave. and you'll see the gated lot.</li>
 			</ul>
 			
 			<h3>The Reception</h3>
 			<!--<img src="img/houseSmall.jpg" />-->
-			<img class="mapImage" src="http://maps.googleapis.com/maps/api/staticmap?center=30.690076,-88.045051&zoom=15&size=240x180&sensor=false&markers=|30.690076,-88.045051" />
-			<p><a href="http://www.portierhouse.org/" target="_blank">Bishop Portier House</a> is a historic home named for the first bishop of Mobile. It's located in the beautiful cathedral square downtown.</p>
+			<a target="_blank" href="https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=Cathedral+Square+mobile+al&aq=&sll=30.639996,-88.041458&sspn=0.397592,0.586395&vpsrc=0&ie=UTF8&hq=Cathedral+Square+mobile+al&ll=30.691456,-88.045056&spn=0.012418,0.018325&t=m&z=16&iwloc=A&cid=17763952713507968723">
+				<img class="mapImage" src="http://maps.googleapis.com/maps/api/staticmap?center=30.690076,-88.045051&zoom=15&size=240x180&sensor=false&markers=|30.690076,-88.045051" />
+			</a>
+				<p><a href="http://www.portierhouse.org/" target="_blank">Bishop Portier House</a> is a historic home named for the first bishop of Mobile. It's located in the beautiful cathedral square downtown.</p>
 			<ul>
-				<li><strong>Directions: </strong>From the ceremony parking lot, turn onto Little Flower Ave. and immediately right (east) on Government St. Continue for about three miles, take a left on to Jackson St., take next left onto Conti, and the Portier House will be a white house on the left, next to the Space 301 Art Gallery.</li>
+				<li><strong>Directions: </strong>(307 Conti St.) From the ceremony parking lot, turn onto Little Flower Ave. and immediately right (east) on Government St. Continue for about three miles, take a left on to Jackson St., take next left onto Conti, and the Portier House will be a white house on the left, next to the Space 301 Art Gallery.</li>
 				<li><strong>Parking: </strong>There should be plenty of street parking nearby. There's also a paid lot one block over on Dauphin St.</li>
 			</ul>
 			
@@ -67,7 +71,7 @@
 			
 			<h5>How Do I Get Around?</h5>
 			<p>Mobile is a driving town. Downtown is more walkable, but driving here is also trickier. There are a lot of one-way streets so please keep that in mind as you plan your route.</p>
-			<p>We’ve created a Google map that marks the ceremony, reception, suggested hotels, and other points of interest. Mary Ella loves using these when she plans our trips out of town. We hope you find them as useful as we do!</p>
+			<p>We’ve created a <a target="_blank" href="https://maps.google.com/maps/ms?vps=7&hl=en&ie=UTF8&oe=UTF8&msa=0&msid=214162340427587174297.0004e183e86661c01c579">Google map</a> that marks the ceremony, reception, suggested hotels, and other points of interest. Mary Ella loves using these when she plans our trips out of town. We hope you find them as useful as we do! <a href="https://maps.google.com/maps/ms?vps=7&hl=en&ie=UTF8&oe=UTF8&msa=0&msid=214162340427587174297.0004e183e86661c01c579" target="_blank">Check it out.</a></p>
 			
 			<h5>What Else Is There To Do?</h5>
 			<ul>
@@ -150,6 +154,20 @@
 	
 	<script type="text/javascript" src="js/lib/jquery-1.7.2.min.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
+	<script type="text/javascript">
+
+  		var _gaq = _gaq || [];
+  		_gaq.push(['_setAccount', 'UA-42603443-1']);
+  		_gaq.push(['_setDomainName', 'samlovesmaryella.com']);
+  		_gaq.push(['_trackPageview']);
+
+  		(function() {
+    		var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    		ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  		})();
+
+</script>
 	
 </body>
 </html>
