--- a/public/index.html
+++ b/public/index.html
@@ -33,26 +33,26 @@
 		</section>
 		
 		<section class="one-third column mainColumn">
-			<h3>The Ceremony</h3>
+			<h3>Ceremony</h3>
 			<!--<img src="img/churchSmall.jpg" />-->
 			<a target="_blank" href="https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=Little+Flower+Catholic+School,+Government+Street,+Mobile,+AL&aq=0&oq=little+flower+&sll=32.576226,-86.680736&sspn=6.228551,9.382324&vpsrc=0&ie=UTF8&hq=Little+Flower+Catholic+School,&hnear=Government+St,+Mobile,+Alabama&t=m&z=14&cid=2738449597473826186&iwloc=A">
-				<img class="mapImage" src="http://maps.googleapis.com/maps/api/staticmap?center=30.674899,-88.090225&zoom=15&size=240x180&sensor=false&markers=|30.674899,-88.090225" />
+				<img class="mapImage" src="/img/flower290.jpg" />
 			</a>
-				<p>Mary Ella has been attending the beautiful <a href="http://www.littleflower.cc/" target="_blank">Little Flower Catholic Church</a> since she was baptized there. </p>
+				<p><a href="http://www.littleflower.cc/" target="_blank">Little Flower Catholic Church</a><br/>2053 Government St.</p>
 			<ul>
-				<li><strong>Directions: </strong>(2053 Government St.) From I-10, take exit 26-B, merge onto Water St., take the first the first left onto Government St., continue for about three miles and it'll be on the left. From I-65, take exit 1 for US 90, take a left onto Government Blvd, continue for about three miles and it'll be on the right. </li>
+				<li><strong>Directions: </strong>From I-10, take exit 26-B, merge onto Water St., take the first the first left onto Government St., continue for about three miles and it'll be on the left. From I-65, take exit 1 for US 90, take a left onto Government Blvd, continue for about three miles and it'll be on the right. </li>
 				<li><strong>Parking: </strong>The best place to park is in the lot behind the Little Flower Catholic School. Just turn onto Little Flower Ave. and you'll see the gated lot.</li>
 			</ul>
 			
-			<h3>The Reception</h3>
+			<h3>Reception</h3>
 			<!--<img src="img/houseSmall.jpg" />-->
 			<a target="_blank" href="https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=Cathedral+Square+mobile+al&aq=&sll=30.639996,-88.041458&sspn=0.397592,0.586395&vpsrc=0&ie=UTF8&hq=Cathedral+Square+mobile+al&ll=30.691456,-88.045056&spn=0.012418,0.018325&t=m&z=16&iwloc=A&cid=17763952713507968723">
-				<img class="mapImage" src="http://maps.googleapis.com/maps/api/staticmap?center=30.690076,-88.045051&zoom=15&size=240x180&sensor=false&markers=|30.690076,-88.045051" />
+				<img class="mapImage" src="/img/portier290.jpg" />
 			</a>
-				<p><a href="http://www.portierhouse.org/" target="_blank">Bishop Portier House</a> is a historic home named for the first bishop of Mobile. It's located in the beautiful cathedral square downtown.</p>
+				<p><a href="http://www.portierhouse.org/" target="_blank">Bishop Portier House</a><br/>307 Conti St.</p>
 			<ul>
-				<li><strong>Directions: </strong>(307 Conti St.) From the ceremony parking lot, turn onto Little Flower Ave. and immediately right (east) on Government St. Continue for about three miles, take a left on to Jackson St., take next left onto Conti, and the Portier House will be a white house on the left, next to the Space 301 Art Gallery.</li>
-				<li><strong>Parking: </strong>There should be plenty of street parking nearby. There's also a paid lot one block over on Dauphin St.</li>
+				<li><strong>Directions: </strong>From the ceremony parking lot, turn onto Little Flower Ave. and immediately right (east) on Government St. Continue for about three miles, take a left on to Jackson St., take next left onto Conti, and the Portier House will be a white house on the left, next to the Space 301 Art Gallery.</li>
+				<li><strong>Parking: </strong>There should be plenty of street parking nearby. There's also a paid lot one block over on Dauphin at Franklin St.</li>
 			</ul>
 			
 		</section>
@@ -63,8 +63,8 @@
 			<p>We'll be celebrating our five year anniversary by finally tying the knot! We hope you can join us in Mobile, AL on <em>September 7th</em> for a ceremony and an afternoon cocktail reception. </p>
 			
 			<h5>Where should I stay?</h5>
-			<p>We have reserved a block of rooms at the <a href="http://hamptoninn.hilton.com/en/hp/">Hampton Inn</a> downtown, just a couple of blocks from the reception site. You can get a standard room for $110/night or a room with a balcony for $129/night using the group code “HAW” if you book before August 16th. This includes a hot breakfast but tax and parking may be extra. You can get more information <a href="http://hamptoninn.hilton.com/en/hp/groups/personalized/M/MOBDTHX-HAW-20130905/index.jhtml?WT.mc_id=POG">here</a>.</p>
-			<p>Another option would be the <a href="http://www.ihg.com/holidayinn/hotels/us/en/mobile/mobhi/hoteldetail">Holiday Inn</a>, just a block from the reception site. Standard rooms start around $105. Check out <a href="http://www.ihg.com/holidayinn/hotels/us/en/mobile/mobhi/hoteldetail">their website</a> for more information.</p>
+			<p>We have reserved a block of rooms at the <a target="_blank" href="http://hamptoninn3.hilton.com/en/hotels/alabama/hampton-inn-and-suites-mobile-downtown-historic-district-MOBDTHX/index.html">Hampton Inn</a> downtown, just a couple of blocks from the reception site. You can get a standard room for $110/night or a room with a balcony for $129/night using the group code “HAW” if you book before August 16th. This includes a hot breakfast but tax and parking may be extra. You can get more information <a target="_blank" href="http://hamptoninn.hilton.com/en/hp/groups/personalized/M/MOBDTHX-HAW-20130905/index.jhtml?WT.mc_id=POG">here</a>.</p>
+			<p>Another option would be the <a target="_blank" href="http://www.ihg.com/holidayinn/hotels/us/en/mobile/mobhi/hoteldetail">Holiday Inn</a>, just a block from the reception site. Standard rooms start around $105. Check out <a href="http://www.ihg.com/holidayinn/hotels/us/en/mobile/mobhi/hoteldetail">their website</a> for more information.</p>
 			
 			<h5>What should I wear?</h5>
 			<p>Attire is dressy but not formal. September in Mobile tends to be hot, but we ask that you be respectful of the church setting for our ceremony. The bride will probably be the only one wearing a long dress (though your cute maxi is okay). No tuxes required.</p>
@@ -75,12 +75,12 @@
 			
 			<h5>What Else Is There To Do?</h5>
 			<ul>
-				<li><a href="http://www.yelp.com/biz/loda-biergarten-mobile-2">LODA Biergarten</a> - Try one (or more) beers from this bar's huge selection. <em>Downtown</em></li>
-				<li><a href="http://www.serdas.com/">Serda's Coffee Co.</a> - Get your morning caffeine fix at this Mobile institution. <em>Downtown</em></li>
-				<li><a href="http://mediterraneansandwich.com/">Mediterranean Sandwich Company</a> - Grab a delicious sandwich at "Club Med." <em>Downtown</em></li>
-				<li><a href="http://www.yelp.com/biz/spot-of-tea-mobile">Spot of Tea</a> - Get your brunch on accross from Cathedral Square. <em>Downtown</em></li>
-				<li><a href="http://www.royalscammobile.com/">Royal Scam</a> - Craving a roasted duck panini with a mango salad? <em>Downtown</em></li>
-				<li><a href="http://www.yelp.com/biz/yen-restaurant-mobile">Yen Vietnamese</a> - Sam's favorite restaurant in Mobile. Get the crepe! <em>Midtown</em></li>
+				<li><a target="_blank" href="http://www.yelp.com/biz/loda-biergarten-mobile-2">LODA Biergarten</a> - Try one (or more) beers from this bar's huge selection. <em>Downtown</em></li>
+				<li><a target="_blank" href="http://www.serdas.com/">Serda's Coffee Co.</a> - Get your morning caffeine fix at this Mobile institution. <em>Downtown</em></li>
+				<li><a target="_blank" href="http://mediterraneansandwich.com/">Mediterranean Sandwich Company</a> - Grab a delicious sandwich at "Club Med." <em>Downtown</em></li>
+				<li><a target="_blank" href="http://www.yelp.com/biz/spot-of-tea-mobile">Spot of Tea</a> - Get your brunch on accross from Cathedral Square. <em>Downtown</em></li>
+				<li><a target="_blank" href="http://www.royalscammobile.com/">Royal Scam</a> - Craving a roasted duck panini with a mango salad? <em>Downtown</em></li>
+				<li><a target="_blank" href="http://www.yelp.com/biz/yen-restaurant-mobile">Yen Vietnamese</a> - Sam's favorite restaurant in Mobile. Get the crepe! <em>Midtown</em></li>
 			</ul>
 			
 		</section>
@@ -106,6 +106,9 @@
 			</div>
 			<div style="width:158px;">
 				<a href="http://www.amazon.com/registry/wedding/2XA18DBGRPHGV" target="_blank"><img src="/img/amazon.jpg" /></a>
+			</div>
+			<div style="width:170px;">
+				<img src="/img/cmoresmallMod.jpg" />
 			</div>
 			
 		</section>
